@@ -128,6 +128,26 @@ the child gets a larger allocation than it requests.
 it's larger
 
 
+<!-- ##### FUNCTION gtk_window_set_resizeable ##### -->
+<para>
+
+</para>
+
+@window: 
+@setting: 
+<!-- # Unused Parameters # -->
+@resizeable: 
+
+
+<!-- ##### FUNCTION gtk_window_get_resizeable ##### -->
+<para>
+
+</para>
+
+@window: 
+@Returns: 
+
+
 <!-- ##### FUNCTION gtk_window_add_accel_group ##### -->
 <para>
 
